<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="Email_Input">Email</string>
    <string name="Pass_Input">Paswword</string>
    <string name="Btn_login">Login</string>
    <string name="Logo">Findelta logo</string>
    <string name="menu_delete">delete_menu</string>
    <string name="menu_archive">menu_archive</string>
    <string name="menu_save">menu_save</string>
    <string name="userlist">Lista De Utilizadores</string>
    <string name="isuserplaceholder">ID User</string>
    <string name="username">User Name</string>
    <string name="UserEmail">Email User</string>
    <string name="Done">Work Done</string>
    <string name="completed">work complete</string>
    <string name="work">Work in progress</string>
    <string name="createuser">Criar Utilizador</string>
    <string name="backbutton">Back to menu</string>
    <string name="Loginin">A conectar</string>
    <string name="data">Data</string>
    <string name="id">ID</string>
    <string name="nome">Nome</string>
    <string name="id_crm">ID CRM</string>
    <string name="data_de_fim">Data de Fim</string>
    <string name="empresa">company</string>
    <string name="data_de_inicio">Data de Inicio</string>
    <string name="respons_vel">Responsável</string>
    <string name="loglist">Lista de Logins</string>
    <string name="Company">Company Name</string>
    <string name="CpmapnyAddress">Address</string>
    <string name="CompanyID">ID Company</string>
    <string name="Client">Lista de Clientes</string>
    <string name="pleaseWait">Por Favor Espere</string>
    <string name="webpage_being_loaded">Login In</string>
    <string name="logout">LogOut</string>
    <string name="exec">user</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="crm_list">Lista De Eventos</string>
    <string name="baseurl">http://visualthinking.ddns.net:81</string>
    <string name="searchbutton">search</string>
    <string name="loading">A Carregar Dados</string>

</resources>
