<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userlistlay"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/grad_bg"
    tools:context=".logs">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="358dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Nome"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/nome"
                android:textSize="14dp"
                android:fontFamily="serif"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iduser" />

            <TextView
                android:id="@+id/iduser"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/Data"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/data"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:fontFamily="serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Nome" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

